Last page, search designe to completion

--- a/Yelp-Camp-Solution/camp/camp.html
+++ b/Yelp-Camp-Solution/camp/camp.html
@@ -33,18 +33,68 @@
             </div>
         </div>
         <div class="main-content">
-            <div id="map">
+            <div class="left-content">
                 <img src="/Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Map.png">
             </div>
-            <div class="cards">
-                <div id="top">
+            <div class="right-content">
+                <div class="pic box">
                     <img src="/Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Camp Images/High Quality Images/Buloy Springs.jpg">
                 </div>
-                <div id="bottom"></div>
+                <div class="desc">
+                    <div class="title">
+                        <h3>Mount Ulap</h3>
+                        <h5>$104.99/night</h5>
+                    </div>
+                    <div class="desc-content">
+                        <p>Mount Ulap is a 7.7 kilometre moderately trafficked point to point rail 
+                            located near Tuba, Benguet, Phillipines that offers the chance to see
+                            wild life and is rated as moderate. The trail is primary used for hiking.
+                        </p>
+                        <p><i>Submitted by Andrew Mike</i></p>
+                    </div>
+                </div>
+                <div class="camp-comments">
+                    <div class="c1">
+                        <div class="c1-t">
+                            <h3>Adam Jones</h3>
+                            <h5>13h ago</h5>
+                        </div>
+                        <div class="c1-c">
+                            <p>Honestly one of the best experiences ever, took us a while to figure
+                                how to get there but it was amazing
+                            </p>
+                        </div>
+                    </div>
+                    <div class="c2">
+                        <div class="c1-t">
+                            <h3>Isaac Dylan</h3>
+                            <h5>1 day ago</h5>
+                        </div>
+                        <div class="c1-c">
+                            <p>Travelling changes you as a person, you gain more perspective, 
+                                this is the perfect spot to do that.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="c3">
+                        <div class="c1-t">
+                            <h3>Hudson Luca</h3>
+                            <h5>3 days ago</h5>
+                        </div>
+                        <div class="c1-c">
+                            <p>Definitely recommend going there, not too far and not a lot of 
+                                people to ruin the experience
+                            </p>
+                        </div>  
+                    </div>
+                </div>
             </div>
         </div>
+        <div class="footer">
+            <img src="/Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Logo.svg" alt="Logo">
+        </div>
     </div>
-    <script src="camp.js"></script>
+    <!-- <script src="camp.js"></script> -->
     <script src="https://kit.fontawesome.com/b849139045.js" crossorigin="anonymous"></script>
 </body>
 </html>
