--- a/Yelp-Camp-Solution/addition/addition.html
+++ b/Yelp-Camp-Solution/addition/addition.html
@@ -15,7 +15,7 @@
                     <img src="/Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Logo.svg">
                 </div>
                 <div class="btn">
-                    <button href="#">Home</button>
+                    <button><a href="../camp/camp.html">Home</a></button>
                 </div>
             </div>
             <div class="right">
@@ -23,16 +23,16 @@
                     <h2>John Doe</h2>
                 </div>
                 <div class="home-btn">
-                    <button href="#">Logout</button>
+                    <button><a href="../login/login.html">Logout</a></button>
                 </div>
                 <div class="dropdown">
                     <div class="hamburger" tabindex="1">
                         <i class="fa-solid fa-bars"></i>
                     </div>
                     <div class="dropdown-menu">
-                        <button>Home</button><br>
+                        <button><a href="../camp/camp.html">Home</a></button><br>
                         <button>John Doe</button><br>
-                        <button>Logout</button>
+                        <button><a href="../login/login.html">Logout</a></button>
                     </div>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                 <input type="text" placeholder="www://http/myimage/image.jpg" id="image"><br>
                 <label for="desc">Description</label><br>
                 <textarea name="desc" id="desc" cols="30" rows="10" placeholder="This is the description of the campground"></textarea>
-                <button type="button" href="#">Add campground</button>
+                <button type="button" href="#"><a href="../camp/camp.html">Add campground</a></button>
             </form>
         </div>
         <div class="bottom">
