--- a/Yelp-Camp-Solution/landing-page/landing-page.html
+++ b/Yelp-Camp-Solution/landing-page/landing-page.html
@@ -21,7 +21,7 @@
                     <li>Leave reviews and experiences</li>
                     <li>See locations for all camps</li>
                 </ul>
-                <button href="#">View Campgrounds</button>
+                <button href="#"><a href="../camp/camp.html">View Campgrounds</a></button>
             </div>
             <div class="footer">
                 <h3>Partnered with:</h3>
