--- a/Yelp-Camp-Solution/login/login.html
+++ b/Yelp-Camp-Solution/login/login.html
@@ -15,7 +15,7 @@
                     <img src="/Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Logo.svg">
                 </div>
                 <div class="back">
-                    <a href="#">←Back to campgrounds</a>
+                    <a href="../camp/camp.html">←Back to campgrounds</a>
                 </div>
             </div>
             <div class="form-header">
@@ -27,8 +27,8 @@
                     <input type="text" placeholder="johndoe_91" id="username"><br>
                     <label for="password">Password</label><br>
                     <input type="password" placeholder="Choose password" id="password"><br>
-                    <button type="button" href="#">Login</button>
-                    <p>Not a user yet? <u>Create an account</u></p>
+                    <button type="button"><a href="../camp/camp.html">Login</a></button>
+                    <p>Not a user yet? <a href="../signup/signup.html">Create an account</a></p>
                 </form>
             </div>
         </div>
