--- a/Yelp-Camp-Solution/search/search.html
+++ b/Yelp-Camp-Solution/search/search.html
@@ -17,7 +17,7 @@
                     <img src="/Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Logo.svg">
                 </div>
                 <div class="home">
-                    <button>Home</button>
+                    <button><a href="../camp/camp.html">Home</a></button>
                 </div>
             </div>
             <div class="right">
@@ -27,7 +27,7 @@
                 </div>
                 <div class="btns-logged">
                     <button id="username">johndoe</button>
-                    <button id="logout">Logout</button>
+                    <button id="logout"><a href="../login/login.html">Logout</a></button>
                 </div>
                 <div class="hamburger" tabindex="1">
                     <i class="fa-solid fa-bars"></i>
@@ -42,10 +42,10 @@
             <div class="mid-intro">
                 <input type="text" placeholder="Search for camps">
                 <!-- <i class="fa-solid fa-magnifying-glass search-icon"></i> -->
-                <button>Search</button>
+                <button><a href="../camp/camp.html">Search</a></button>
             </div>
             <div class="or">
-                <a href="http://127.0.0.1/Yelp-Camp-Solution/addition/addition.html">Or add your own campground.</a>
+                <a href="../addition/addition.html">Or add your own campground.</a>
             </div>
         </div>
         <div class="bottom-section">
@@ -58,7 +58,7 @@
                     <p>One of the most famous hikes in Benguet is mount Ulap in Otogon</p>
                 </div>
                 <div class="btn">
-                    <button>View Campground</button>
+                    <button><a href="../camp/camp.html">View Campground</a></button>
                 </div>
             </div>
             <div class="b1">
@@ -70,7 +70,7 @@
                     <p>A paradise of islands that can rival the white sand beauty of Borocay</p>
                 </div>
                 <div class="btn">
-                    <button>View Campground</button>
+                    <button><a href="../camp/camp.html">View Campground</a></button>
                 </div>
             </div>
             <div class="b1">
@@ -82,7 +82,7 @@
                     <p>This is one of the best camping sites, beautify and pristine</p>
                 </div>
                 <div class="btn">
-                    <button>View Campground</button>
+                    <button><a href="../camp/camp.html">View Campground</a></button>
                 </div>
             </div>
             <div class="b1">
@@ -94,7 +94,7 @@
                     <p>The seven sisters is the 39th tallest waterfall in Norway</p>
                 </div>
                 <div class="btn">
-                    <button>View Campground</button>
+                    <button><a href="../camp/camp.html">View Campground</a></button>
                 </div>
             </div>
             <div class="b1">
@@ -106,7 +106,7 @@
                     <p>Phillipines is one of the most dazzling countries in all of Asia</p>
                 </div>
                 <div class="btn">
-                    <button>View Campground</button>
+                    <button><a href="../camp/camp.html">View Campground</a></button>
                 </div>
             </div>
             <div class="b1">
@@ -118,7 +118,7 @@
                     <p>This is one of the best camping sites, beautify and pristine</p>
                 </div>
                 <div class="btn">
-                    <button>View Campground</button>
+                    <button><a href="../camp/camp.html">View Campground</a></button>
                 </div>
             </div>
         </div>
