--- a/Yelp-Camp-Solution/camp/camp.html
+++ b/Yelp-Camp-Solution/camp/camp.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="btns-logged">
                     <button id="username">johndoe</button>
-                    <button id="logout">Logout</button>
+                    <button id="logout"><a href="../login/login.html">Logout</a></button>
                 </div>
                 <div class="hamburger" tabindex="1">
                     <i class="fa-solid fa-bars"></i>
@@ -88,6 +88,7 @@
                         </div>  
                     </div>
                 </div>
+                <button><a href="../search/search.html">Search</a></button>
             </div>
         </div>
         <div class="footer">
