--- a/Yelp-Camp-Solution/comments/comment.html
+++ b/Yelp-Camp-Solution/comments/comment.html
@@ -16,7 +16,7 @@
                         <img src="/Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Logo.svg">
                     </div>
                     <div class="btn">
-                        <button href="#">Home</button>
+                        <button href="#"><a href="../camp/camp.html">Home</a></button>
                     </div>
                 </div>
                 <div class="right">
@@ -24,16 +24,16 @@
                         <h2>John Doe</h2>
                     </div>
                     <div class="home-btn">
-                        <button href="#">Logout</button>
+                        <button><a href="../login/login.html">Logout</a></button>
                     </div>
                     <div class="dropdown">
                         <div class="hamburger" tabindex="1">
                             <i class="fa-solid fa-bars"></i>
                         </div>
                         <div class="dropdown-menu">
-                            <button>Home</button><br>
+                            <button href="#"><a href="../camp/camp.html">Home</a></button><br>
                             <button>John Doe</button><br>
-                            <button>Logout</button>
+                            <button><a href="../login/login.html">Logout</a></button>
                         </div>
                     </div>
                 </div>
@@ -45,7 +45,7 @@
         <form>
             <label for="comment">Comment</label>
             <textarea name="comment" id="comment" cols="30" rows="10" placeholder="This was probably the best camp I have visited this past year. Definitely recommend visiting any time soon"></textarea>
-            <button type="button" href="#">Post Comment</button>
+            <button type="button"><a href="../camp/camp.html">Post Comment</a></button>
         </form>
     </div>
     <div class="bottom">
